#-------------------------------------------------------------------------------
# Cmake configuration
#-------------------------------------------------------------------------------

cmake_minimum_required(VERSION 2.8.12)

if (NOT AH_BUILDENV_PATH)
    set(AH_BUILDENV_PATH "/path/to/ah_build-env" CACHE PATH "path to cmake macros")
    message(FATAL_ERROR "please specify the AH_BUILDENV_PATH where the build macros helpers are located")
endif()
include("${AH_BUILDENV_PATH}/cmake/macros.cmake")

#-------------------------------------------------------------------------------
# set project
#-------------------------------------------------------------------------------

set(AH_PROJECT "google-url")
project(${AH_PROJECT})

#-------------------------------------------------------------------------------
# Build Options
#-------------------------------------------------------------------------------

AH_SET_BUILD_OPTIONS()
    
#-------------------------------------------------------------------------------
# project configuration
#-------------------------------------------------------------------------------

include_directories(${CMAKE_CURRENT_SOURCE_DIR})
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/..) # fatal error: googleurl/src/url_util.h: No such file or directory

#-------------------------------------------------------------------------------
# doxygen configuration
#-------------------------------------------------------------------------------

#-------------------------------------------------------------------------------
# Summary Status
#-------------------------------------------------------------------------------

#-------------------------------------------------------------------------------
# build deps
#-------------------------------------------------------------------------------

#add_subdirectory(base)

#-------------------------------------------------------------------------------
# build modules
#-------------------------------------------------------------------------------

add_subdirectory(src)
 
#-------------------------------------------------------------------------------
# Install
#-------------------------------------------------------------------------------

AH_INSTALL_HEADERS_TO(src "${AH_PROJECT}")

#-------------------------------------------------------------------------------
# Create bundle
#-------------------------------------------------------------------------------



